# algoUno

./: README.md
guias-aed1/: Ejercicios-Palabras.hs  VariablesTipo.hs  t03 - especificacion de problemas - funcional basico.rar  t04 - funcional polimorfismo - currificacion - recursion.rar  t05 - Funcional listas - recursion sobre listas.rar
guias-aed1/intro-sol-1/: definiciones.tex  sol-guia1.aux  sol-guia1.tex
guias-aed1/intro-sol-2/: definiciones.tex  sol-guia2.aux  sol-guia2.tex
guias-aed1/intro-sol-3/: sol-guia3.aux  sol-guia3.tex
labo-codigo/: guia3-haskell.hs  guia4-recursion.hs  guia5-listas.hs  practica-en-casa.hs
labo-codigo/3_guia/: guia3-haskell.hs
labo-codigo/5++_guia/1-3/: guia5-tipos.hs
labo-codigo/5++_guia/4/: Tipos4.hs  agregarContacto.hs  eliminarContacto.hs  enLosContactos.hs
labo-codigo/5_guia/: 5_guia.cabal  CHANGELOG.md  guia5-listas  guia5-listas.hi  guia5-listas.hs
labo-codigo/5_guia/app/: Main.hs
labo-codigo/5_guia/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
labo-codigo/6_guia/: 6_clase.py  clase_6.py  guia6.py
labo-codigo/7_guia/: 7_clase.py
labo-codigo/8_guia/: 8_clase.py  Guia8.py  himno.txt  paste.py
labo-codigo/clase-repaso/: repaso.hs
labo-codigo/parciales/: 1er_parcial.hs  codificacion.hs  registroAlumnos.hs  vamosCampeones.hs  viva_la_democracia.hs
labo-codigo/simulacro/: Solucion.hs  simulacro.hs
teoricas/notas-teorica/: definiciones.tex  notas.aux  notas.tex
tpHaskell/: README.md  Solucion.hs  test-catedra.hs
(+5 files in other folders)
